add form to gather user input

--- a/html/main.html
+++ b/html/main.html
@@ -10,7 +10,16 @@
 </head>
 <body>
     
-
+<div class="container">
+    <h1>Places have been</h1>
+    <form action="" class="form-class">
+        <input type="text" placeholder="place" id="destination-place" class="destination-form"><br>
+        <input type="text" placeholder="location" id="destination-location" class="destination-form"><br>
+        <input type="text" placeholder="landmark" id="destination-landmark" class="destination-form"><br>
+        <button type="submit" class="btn">submit</button><br>
+    </form>
+    <ul class=listOfPlaces></ul>
+</div>
 
 
 
